--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,7 +2,7 @@
   height: 55rem;
   overflow-y: scroll;
   background-color: $color-white;
-  padding: 1rem;
+  padding: 2rem;
   border: 2px solid $color-outline;
 
   box-shadow: 1rem 2rem 4rem rgba(0, 0, 0, 0.15);
